--- a/sites/all/themes/slac/sass/components/_frontpage-slac-projects.scss
+++ b/sites/all/themes/slac/sass/components/_frontpage-slac-projects.scss
@@ -8,9 +8,12 @@
   }
 
   li {
-    @include font-size(12px);
-    list-style-type: none;
-    list-style-image: none;
-    margin-bottom: 0.4375rem;
+    list-style: none;
+
+    a {
+      @include font-size(11px);
+      display: block;
+      padding: 0.2rem 0;
+    }
   }
 }
