--- a/sites/all/themes/slac/sass/components/_frontpage.scss
+++ b/sites/all/themes/slac/sass/components/_frontpage.scss
@@ -1,3 +1,7 @@
+.front .content-container {
+  padding-top: 0;
+}
+
 .main-wrapper {
   background: $white;
 
